views/style.css
/* -------------------- General Styling -------------------- */
* {
    margin: 0;   
}

body {
    margin: auto;
    background: #2b2c2d;
    color: #ffffff;
    height:100%;
    font-family: "Helvetica Neue Ultralight", Helvetica;
}

div {
    margin: auto;
    width: 90%;
}

h1, p {
    margin: auto;
    margin-top: 25px;
    text-align: center;
}

p {
    margin-bottom: 3px;
}

/*-------------------- Home page slideshow sections -------------------- */
#catButton, #bothButton, #dogButton {
    background: #18a190;
    margin: 2.5%;
    padding: 1%;
    height: 200px;
    width: 25%;
    min-width: 300px;
    border-radius: 10px;
    float: left;
    overflow: auto;
}

#bothButton {
    background: #167692;
}

img {
    margin: auto;
    height: inherit;
    width: 290px;
}

/* -------------------- Register/login Forms -------------------- */
form {
    margin: auto;
    margin-bottom: 3px;
    width: 40%;
}

input {
    margin: auto;
    margin-bottom: 3px;
    height: 25px;
    width: 100%;
    border: 2px;
    border-radius: 5px;
    border-color: #7c8385;  
}

button {
    margin: auto;
    margin-left: auto;
    margin-right: auto;
    height: 25px;
    width: 100%;
    border: 2px;
    border-radius: 5px;
    background: #18a190;
    color: #ffffff;
}
/* -------------------- Footer/Navigation Bar -------------------- */
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #7c8385;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover {
    background-color: #18a190;
}

.active {
    background-color: #167692
}

ol li {
    float: none;
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

ol li:hover {
    background-color: #18a190;
}

#footerMenuSignedOut, #footerMenuSignedIn{
    position:fixed;
    bottom:0;
    width:100%;
}


/* -------------------- Profile view -------------------- */
#top {
    width: 100%;
    height: 200px;
    background: #167692;
}

#picture {
    width: 20%;
    float: left;
    position: relative;
}

#profilePic {
    height: 200px;
    width: 200px;
}

#editPic {
    height: 20px;
    width: 20px;
    position: absolute;
}

#editUsername {
    height: 20px;
    width: 20px;
}

#info {
    width: 80%;
    float: right;
}

#info img {
    height: 20px;
    width: 20px;
    float: right;
}

#info p {
    text-align: left;
}

#rest {
    width: 100%;
    height: auto;
}

#profilePost {
    width: 20%;
    left: 0px;
}

#profilePost input {
    min-height: 300px;
    height: auto;
}

#profileFeed {
    width: 80%;
    right: 0px;
}

